--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,24 @@ h6 {
   background: #FF8A00;
 }
 
+.fade-gradient {
+  background: #070E13;
+  border: 2px solid transparent;
+  /* Transparent border to show the gradient */
+  background-image: linear-gradient(#070E13, #070E13),
+    /* Solid button background */
+    linear-gradient(180deg, #1C1C1C, #F18302);
+  /* Gradient border */
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  /* Clip the background and border separately */
+  /* display: inline-block; */
+}
+
+.fade-gradient:hover {
+  background: #FF8A00;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
