OMA contact, terms, and policy page init

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,11 +44,14 @@ p {
   background-origin: border-box;
   background-clip: padding-box, border-box;
   /* Clip the background and border separately */
-  /* display: inline-block; */
+  display: inline-block;
+  transition: ease-out 0.3s;
+  margin: 0 2px
 }
 
 .fade-gradient:hover {
   background-image: linear-gradient(180deg, #FF8A00, #FF8A00A3);
+  transform: scale(1.02);
 }
 
 @layer utilities {
