--- a/app/globals.css
+++ b/app/globals.css
@@ -49,6 +49,22 @@ p {
   /* margin: 0 2px */
 }
 
+.fade-gradient-no-hover {
+  background: #070E13;
+  border: 2px solid transparent;
+  /* Transparent border to show the gradient */
+  background-image: linear-gradient(#070E13, #070E13),
+    /* Solid button background */
+    linear-gradient(180deg, #1C1C1C, #FF8A00);
+  /* Gradient border */
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  /* Clip the background and border separately */
+  /* display: inline-block; */
+  transition: ease-out 0.3s;
+  /* margin: 0 2px */
+}
+
 .custom-radio {
   @apply appearance-none w-5 h-5 border-2 border-[#c2c2c2] rounded-full cursor-pointer;
 }
