--- a/app/globals.css
+++ b/app/globals.css
@@ -228,3 +228,24 @@ input:-ms-autofill {
       transform: translateY(100%);
   }
 }
+
+
+.scrollbar {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #888 transparent; /* For Firefox */
+}
+
+/* Scrollbar for Webkit Browsers */
+.scrollbar::-webkit-scrollbar {
+  height: 8px;
+  background-color: #222; /* Scrollbar Track */
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: #888; /* Scrollbar Thumb */
+  border-radius: 4px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Thumb Hover Effect */
+}
