--- a/app/globals.css
+++ b/app/globals.css
@@ -291,3 +291,24 @@ input:-ms-autofill {
   /* Adjust opacity as needed */
   z-index: -1;
 }
+
+.ribbon-2 {
+  --f: 15px;
+  /* control the folded part*/
+  --r: 15px;
+  /* control the ribbon shape */
+  --t: 30px;
+  /* the top offset */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  inset: var(--t) calc(-1*var(--f)) auto auto;
+  padding: var(--f) 100px 30px calc(100px + var(--r));
+  clip-path:
+    polygon(0 0, 100% 0, 100% calc(100% - var(--f)), calc(100% - var(--f)) 100%,
+      calc(100% - var(--f)) calc(100% - var(--f)), 0 calc(100% - var(--f)),
+      var(--r) calc(50% - var(--f)/2));
+  background: #494949;
+  /* box-shadow: 0 calc(-1*var(--f)) 0 #0005; */
+}
