--- a/app/globals.css
+++ b/app/globals.css
@@ -309,6 +309,18 @@ input:-ms-autofill {
     polygon(0 0, 100% 0, 100% calc(100% - var(--f)), calc(100% - var(--f)) 100%,
       calc(100% - var(--f)) calc(100% - var(--f)), 0 calc(100% - var(--f)),
       var(--r) calc(50% - var(--f)/2));
-  background: #424242;
+  background: #1D374A;
   /* box-shadow: 0 calc(-1*var(--f)) 0 #0005; */
+}
+
+@media screen and (max-width: 640px) {
+  .ribbon-2 {
+    inset: calc(var(--t) + 0px) calc(-1*var(--f)) auto auto;
+    padding: calc(var(--f) + 0px) 30px 30px calc(30px + var(--r));
+    clip-path:
+      polygon(0 0, 100% 0, 100% calc(100% - var(--f)), calc(100% - var(--f)) 100%,
+        calc(100% - var(--f)) calc(100% - var(--f)), 0 calc(100% - var(--f)),
+        var(--r) calc(50% - var(--f)/2));
+  }
+
 }
