--- a/app/globals.css
+++ b/app/globals.css
@@ -197,6 +197,10 @@ input:-ms-autofill {
   /* color: white !important; */
 }
 
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
 @keyframes slideUp {
   0% {
     transform: translateY(100%);
